--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ username: Joey Bose
 # > set this to your job title, e.g. Fullstack Developer
 typing_text: Phd Candidate at McGill and Mila
 # email: Your E-Mail address for the email button.
-email: joey.bose@mail.utoronto.com
+email: joey.bose@mail.mcgill.ca
 # For every social button you want to display, set your username or userid
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
