Added Research tag

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,6 @@
+---
+permalink: /Research
+---
 # > name: Name of your project
 # > descr: Description of your project
 # > demo: Link to your project
