--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -17,6 +17,7 @@
   conf: Preprint
   authors: A. Mladenović*, A.J. Bose*, H. Berard*, W.L. Hamilton, S. Lacoste-Julien, P. Vincent, G.Gidel
   image_link: "./assets/my_assets/stochastic_secretary_fixed-1.png"
+  arxiv: https://arxiv.org/abs/2103.02014
   tags:
     - tag: Adversarial Attacks
     - tag: Online Algorithms
