--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -29,7 +29,7 @@
   timeline-side: left
 
 - title: Facebook AI Research
-  date: May 2021 - Present
+  date: May 2021 - Dec 2021
   subtitle: Research Intern
   tags:
     - tag: Generative Models
