--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -27,6 +27,7 @@
   conf: Preprint 2022
   authors: C.W. Huang*, M. Aghajohari*, A.J. Bose, P. Panangaden, A. Courville
   image_link: "./assets/my_assets/rdm_fig.png"
+  arxiv: https://arxiv.org/pdf/2208.07949.pdf
   tags:
     - tag: Diffusion Models
     - tag: Riemmanian Geometry
