--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,6 +13,21 @@
 #     - tag: AngularJS
 #     - tag: Node
 
+- name: EDGI: Equivariant diffusion for planning with embodied agents
+  conf: Preprint
+  authors: J. Bremer*, A. J. Bose*, P. de Haan, T. Cohen
+  image_link: "./assets/my_assets/edgi_sketch.pdf"
+  tags:
+    - tag: Generative Models
+
+- name: Feature Likelihood Score: Evaluating Generalization of Generative Models Using Samples
+  conf: Preprint
+  authors: M. Jiralerspong, A. J. Bose, G. Gidel
+  image_link: "./assets/my_assets/headline_plot.png"
+  arxiv: https://arxiv.org/abs/2302.04440
+  tags:
+    - tag: Generative Models
+
 - name: A General Framework For Proving The Equivariant Strong Lottery Ticket Hypothesis
   conf: ICLR 2023
   authors: D. Ferbach*, C. Tsirigotis*, G. Gidel, A.J. Bose
