updates to timeline

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -29,7 +29,7 @@
   timeline-side: left
 
 - title: Qualcomm AI Research
-  date: Oct 2022 - Present
+  date: Oct 2022 - Feb 2023
   subtitle: Research Intern
   tags:
     - tag: Generative Models
