updated bio and cv

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 username: Joey Bose
 # typing_text: This will be typed before 'scroll down for more'.
 # > set this to your job title, e.g. Fullstack Developer
-typing_text: Phd Candidate at McGill and Mila
+typing_text: Post-Doc at University of Oxford and ML Scientist at DreamFold
 # email: Your E-Mail address for the email button.
 email: joey.bose@mail.mcgill.ca
 # For every social button you want to display, set your username or userid
@@ -46,7 +46,7 @@ show_aboutme_card: true
 # about_me_title: The will be displayed as the title in the About Me section
 about_me_title: About Me
 # about_me_description: This will be displayed under the title.
-about_me_description: Joey Bose completed his PhD at McGill/Mila under the supervision of Will Hamilton, Gauthier Gidel, and Prakash Panagaden. His research interests span Generative Modelling, Differential Geometry for Machine Learning, Adversarial Attacks and  Graph Representation Learning with a current emphasis on understanding symmetries, equivariances and invariances in data. Previously, he completed his Bachelors and Master’s degrees from the University of Toronto working on adversarial attacks against face detection and is the President and CEO of FaceShield Inc an educational platform for digital privacy for facial data. His work has been featured in Forbes, CBC, VentureBeat and other media outlets and is generously supported by the IVADO PhD Fellowship.
+about_me_description: Joey Bose is a Post-Doctoral Fellow at University of Oxford working with Michael Bronstein and an ML scientist at Dreamfold. He completed his PhD at McGill/Mila under the supervision of Will Hamilton, Gauthier Gidel, and Prakash Panagaden. His research interests span Generative Modelling, Differential Geometry for Machine Learning with a current emphasis on understanding symmetries, equivariances and invariances in data. Previously, he completed his Bachelors and Master’s degrees from the University of Toronto working on adversarial attacks against face detection and is the President and CEO of FaceShield Inc an educational platform for digital privacy for facial data. His work has been featured in Forbes, CBC, VentureBeat and other media outlets and is generously supported by the IVADO PhD Fellowship.
 
 # SKILLS SECTION
 # show_skills_card:
@@ -65,7 +65,7 @@ show_timeline_card: true
 timeline_title: Education & Experience
 # cv_download_link: The link where you host your cv.
 # > e.g. you share your cv on your dropbox, then add the dropbox link here
-cv_download_link: "./assets/my_assets/joey_cv_feb_2023.pdf"
+cv_download_link: "./assets/my_assets/joey_cv_dec_2023.pdf"
 
 # PROJECTS SECTION
 # show_projects_card:
