Updated iclr 2024 paper status

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -18,13 +18,13 @@
   arxiv: https://drive.google.com/file/d/1HmdOUU09D6VGja7AipT1a2lAcaCOc0oz/view
 
 - name: SE(3) Stochastic Flow Matching for Protein For Protein Backbone Generation
-  conf: Preprint 2023
+  conf: ICLR 2024 (Spotlight)
   authors: A. J. Bose*, T. Akhound-Sadegh*, K. Fatras, G. Huguet, J. Rector-Brooks, C.H. Liu, A.C. Nica, M. Korablyov, M. Bronstein, A. Tong
   image_link: "./assets/my_assets/protein_intro_fig.png"
   arxiv: https://arxiv.org/abs/2310.02391
 
 - name: On the Stability of Iterative Retraining of Generative Models on their own Data
-  conf: Preprint 2023
+  conf: ICLR 2024 (Spotlight)
   authors: Q. Bertrand, A. J. Bose, A. Duplessis, M. Jiralerspong, G. Gidel
   image_link: "./assets/my_assets/2D_toy.png"
   arxiv: https://arxiv.org/pdf/2310.00429.pdf
