--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 username: Joey Bose
 # typing_text: This will be typed before 'scroll down for more'.
 # > set this to your job title, e.g. Fullstack Developer
-typing_text: Post-Doc at University of Oxford and ML Scientist at DreamFold
+typing_text: Post-Doc at University of Oxford
 # email: Your E-Mail address for the email button.
 email: joey.bose@mail.mcgill.ca
 # For every social button you want to display, set your username or userid
