--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -17,6 +17,11 @@
 #     - tag: Rails
 #   timeline-side: right
 
+- title: Mila
+  date: Sept 2024 - Present
+  subtitle: Affiliate Member
+  timeline-side: right
+
 - title: University of Oxford
   title-url: https://scholar.google.com/citations?user=ybPyI7IAAAAJ&hl=en
   date: Jan 2024 - Present
