--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,23 +13,25 @@
 #     - tag: AngularJS
 #     - tag: Node
 - name: Sequence-Augmented SE(3)-Flow Matching For Conditional Protein Backbone Generation
-  conf: Preprint
+  conf: NeurIPS 2024
   authors: G. Huguet*, J. Vuckovic*, K. Fatras, E. Thibodeau-Laufer, P. Lemos, R. Islam, C. Liu, J. Rector-Brooks, T. Akhound-Sadegh, M. Bronstein, A. Tong, A. J. Bose
   image_link: "./assets/my_assets/main_v3.png"
   arxiv: https://arxiv.org/abs/2405.20313
 
 - name: Self-Consuming Generative Models with Curated Data Provably Optimize Human Preferences
-  conf: Preprint
+  conf: NeurIPS 2024 (Spotlight)
   authors: D. Ferbach, Q. Bertrand, A. J. Bose, G. Gidel
+  image_link: "./assets/my_assets/self_consuming_models_rlhf.png"
+  arxiv: https://arxiv.org/pdf/2407.09499
 
 - name: Metric Flow Matching for Smooth Interpolations on the Data Manifold
-  conf: Preprint
+  conf: NeurIPS 2024
   authors: K. Kapusniak, P. Potaptchik, T. Reu, L. Zhang, A. Tong, M. Bronstein, A. J. Bose, F. D. Giovanni
   image_link: "./assets/my_assets/MFM.png"
   arxiv: https://arxiv.org/pdf/2405.14780
 
 - name: Fisher Flow Matching for Generative Modeling over Discrete Data
-  conf: Preprint
+  conf: NeurIPS 2024
   authors: O. Davis, S. Kessler, M. Petrache, I. I. Ceylan, M. Bronstein, A. J. Bose
   image_link: "./assets/my_assets/fisher_flows.png"
   arxiv: https://arxiv.org/pdf/2405.14664
