December website updates

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -12,6 +12,18 @@
 #     - tag: Express
 #     - tag: AngularJS
 #     - tag: Node
+- name: The Superposition of Diffusion Models
+  conf: Preprint 2024
+  authors: M. Skreta, L. Atanackovic, A. J. Bose, A. Tong, K. Neklyudov
+  image_link: "./assets/my_assets/superdiff_headline_fig.png"
+  arxiv: https://openreview.net/pdf?id=2o58Mbqkd2
+
+- name: Steering Masked Discrete Diffusion Models via Discrete Denoising Posterior Prediction
+  conf: Preprint 2024
+  authors: J. Rector-Brooks, M. Hasan, Z. Peng, Z. Quinn, C. Liu, S. Mittal, N. Dziri, M. Bronstein, Y. Bengio, P. Chatterjee, A. Tong*, A. J. Bose*
+  image_link: "./assets/my_assets/ddpp_beta_sheet.png"
+  arxiv: https://arxiv.org/pdf/2410.08134
+
 - name: Sequence-Augmented SE(3)-Flow Matching For Conditional Protein Backbone Generation
   conf: NeurIPS 2024
   authors: G. Huguet*, J. Vuckovic*, K. Fatras, E. Thibodeau-Laufer, P. Lemos, R. Islam, C. Liu, J. Rector-Brooks, T. Akhound-Sadegh, M. Bronstein, A. Tong, A. J. Bose
