--- a/_data/skills-languages.yml
+++ b/_data/skills-languages.yml
@@ -5,20 +5,20 @@
 # - name: Language
 #   weight: 5
 
-- name: Generative Models
-  weight: 4
+#- name: Generative Models
+  #weight: 4
 
-- name: Normalizing Flows
-  weight: 4
+#- name: Normalizing Flows
+  #weight: 4
 
-- name: Equivariant Networks
-  weight: 4
+#- name: Equivariant Networks
+  #weight: 4
 
-- name: Adversarial Attacks
-  weight: 4
+#- name: Adversarial Attacks
+  #weight: 4
 
-- name: Graph Neural Networks
-  weight: 2
+#- name: Graph Neural Networks
+  #weight: 2
 
 #- name: KG Embeddings
   #weight: 2
