--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 username: Joey Bose
 # typing_text: This will be typed before 'scroll down for more'.
 # > set this to your job title, e.g. Fullstack Developer
-typing_text: Post-Doc at University of Oxford
+typing_text: Incoming Assisstant Professor at Imperial College London
 # email: Your E-Mail address for the email button.
 email: joey.bose@mail.mcgill.ca
 # For every social button you want to display, set your username or userid
@@ -46,7 +46,7 @@ show_aboutme_card: true
 # about_me_title: The will be displayed as the title in the About Me section
 about_me_title: About Me
 # about_me_description: This will be displayed under the title.
-about_me_description: Joey Bose is a Post-Doctoral Fellow at University of Oxford working with Michael Bronstein, and an Affiliate member of Mila. He completed his PhD at McGill/Mila under the supervision of Will Hamilton, Gauthier Gidel, and Prakash Panagaden. His research interests span Generative Modelling, Differential Geometry for Machine Learning with a current emphasis on geometric generative models for scientific applications. Previously, he completed his Bachelors and Master’s degrees from the University of Toronto working on adversarial attacks against face detection and is the President and CEO of FaceShield Inc an educational platform for digital privacy for facial data. His work has been featured in Forbes, New York Times, CBC, VentureBeat and other media outlets and was generously supported by the IVADO PhD Fellowship, and NSERC Post-doc Fellowship.
+about_me_description: Joey Bose is an incoming Assisstant Professor of Computing at Imperial College London starting January 2026, and an Affiliate member Mila. Previously, he was a Post-Doctoral Fellow at University of Oxford working with Michael Bronstein. He completed his PhD at McGill/Mila under the supervision of Will Hamilton, Gauthier Gidel, and Prakash Panagaden. His research interests span Generative Modelling, Differential Geometry for Machine Learning with a current emphasis on geometric generative models for scientific applications. Previously, he completed his Bachelors and Master’s degrees from the University of Toronto working on adversarial attacks against face detection and is the President and CEO of FaceShield Inc an educational platform for digital privacy for facial data. His work has been featured in Forbes, New York Times, CBC, VentureBeat and other media outlets and was generously supported by the IVADO PhD Fellowship, and NSERC Post-doc Fellowship.
 
 # SKILLS SECTION
 # show_skills_card:
@@ -54,7 +54,7 @@ about_me_description: Joey Bose is a Post-Doctoral Fellow at University of Oxfor
 # > setting this to false, will omit the Skills section
 show_skills_card: true
 # about_me_title: The will be displayed as the title in the Skills section
-skills_title: Research Interests
+skills_title: Research Interests, Students, Teaching
 
 # TIMELINE SECTION
 # show_timeline_card:
